[tool.poetry]
name = "development_example"
version = "0.1.0"
description = ""
authors = ["beachasaurus-rex <jonrizk@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
tox = ">=4.0"
pytest = ">=8.0"
numpy = "^2.0.1"
coverage = "^7.6.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "development_example"

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true
omit = [
    "__init__.py",
    "test_*.py"
]

[tool.coverage.json]
pretty_print = true